<resources>
    <string name="app_name">Evaluacion2</string>
    <string name="iniciar_secion">Iniciar Secion</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="nombre">Nombre</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_secion2">Iniciar Secion</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="bienvenido_a_visual">Bienvenido a Visual</string>
    <string name="olvidaste_la_contrasena">Olvidaste La Contrasena</string>
    <string name="usuario">Usuario</string>
    <string name="ingrese_usuario">Ingrese Usuario</string>
    <string name="ingrese_contrase_a">Ingrese Contraseña</string>
    <string name="menu">Menu</string>
    <string name="cliclk">cliclk</string>
    <string name="clases">Clases</string>
    <string name="clase_1">Clase 1</string>
    <string name="clases11">Clases</string>
</resources>