<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido_a_visual"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginVertical="30dp" />


    <TextView
        android:id="@+id/Textochiquito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:text="@string/ingrese_usuario" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usuario1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp" />
    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/Textochiquito2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:text="@string/ingrese_contrase_a" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:textColorHint="@color/black"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Botones-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/boton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/crear_usuario" />
        <!--Botones Menu-->
        <Button
            android:id="@+id/BotonaMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_secion2"
            android:layout_marginStart="10dp" />

        <!--Olvidaste la contraseña-->
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/olvidaste_la_contrasena"
        android:textColor="@color/black" />

</LinearLayout>